fix scrollbar also

--- a/app/globals.css
+++ b/app/globals.css
@@ -533,5 +533,31 @@ body {
     line-height: 88px;
   }
 }
+/* WebKit Browsers */
+::-webkit-scrollbar {
+  width: 8px; /* Width of the vertical scrollbar */
+  height: 8px; /* Height of the horizontal scrollbar */
+}
+
+::-webkit-scrollbar-track {
+  background: #777777; /* Track color */
+  border-radius: 4px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #000319; /* Scrollbar thumb color */
+  border-radius: 4px;
+  border: 2px solid #f1f1f1; /* Creates padding around thumb */
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: #000319; /* Thumb color on hover */
+}
+
+/* Firefox */
+* {
+  scrollbar-width: thin; /* "auto" or "thin" */
+  scrollbar-color: #000319 #aaaaaa; /* thumb and track */
+}
 
 }
